interview show page - image sizing - fixed column overflow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -236,6 +236,7 @@ body,
 
 .participant-show-img {
   min-width: 303.06px;
+  max-width: 100%;
   height: 260px;
   box-shadow: 0px 13px 28px rgba(0, 39, 92, 0.08);
   border-radius: 6px;
